fix: Add CSS variable for grid overflow in lf-masonry
Introduces the --lf-<comp>-grid-overflow CSS variable to control the overflow property of the grid in the lf-masonry component, defaulting to 'auto'.

--- a/packages/core/src/components/lf-masonry/lf-masonry.scss
+++ b/packages/core/src/components/lf-masonry/lf-masonry.scss
@@ -78,6 +78,11 @@ $comp: "masonry";
     align-items: var(--lf-#{$comp}-grid-items-alignment, start);
     column-gap: var(--lf-#{$comp}-grid-gap, 0.5em);
     display: grid;
+    /**
+    * @prop --lf-#{$comp}-grid-overflow: Sets the overflow for the grid of the #{$comp} component.
+    *                                    Defaults to => auto
+    */
+    overflow: var(--lf-#{$comp}-grid-overflow, auto);
   }
 
   &--horizontal {
